# plotly-football-pitch

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  frozen-requirements.txt  genindex.html  index.html  objects.inv  pitch.ipynb  pitch_plot.py  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: modules.doctree  plotly_football_pitch.doctree  plotly_football_pitch.pitch_background.doctree  plotly_football_pitch.pitch_dimensions.doctree  plotly_football_pitch.pitch_plot.doctree  readme.doctree
.github/workflows/: docs.yml  release.yml  test.yml
_sources/source/: plotly_football_pitch.pitch_dimensions.rst.txt
docs/: conf.py  index.rst
docs/source/: modules.rst  plotly_football_pitch.pitch_background.rst  plotly_football_pitch.pitch_plot.rst  plotly_football_pitch.rst
notebooks/: pitch.ipynb
source/: modules.html  plotly_football_pitch.html  plotly_football_pitch.pitch_background.html  plotly_football_pitch.pitch_dimensions.html  plotly_football_pitch.pitch_plot.html  readme.html
src/plotly_football_pitch/: __init__.py  pitch_background.py  pitch_dimensions.py  pitch_plot.py
src/plotly_football_pitch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pitch_plot.py
